# jrm

./: .env  .gitignore  Cargo.toml  Readme.md
asset/: TestAnnotation.java
crates/base-macro/: Cargo.toml
crates/base-macro/src/: attr_enum.rs  lib.rs  syn_err.rs
crates/jrm/: Cargo.toml
crates/jrm-cli/: Cargo.toml
crates/jrm-cli/src/: main.rs
crates/jrm-macro/: Cargo.toml
crates/jrm-macro/src/: attribute_enum.rs  base_attribbute.rs  base_attribute.rs  build_enum_input.rs  class_parser.rs  constant.rs  constant_enum.rs  define_constants.rs  define_instrucitons.rs  getter.rs  impl_class_parser_for_vec.rs  klass_debug.rs  lib.rs  native_fn.rs  parse_variant.rs  utils.rs
crates/jrm-macro/src/class_parser/: enum_entry.rs  mod.rs
crates/jrm-native/: Cargo.toml  Readme.md
crates/jrm-native/src/: lib.rs
crates/jrm-parse/: Cargo.toml
crates/jrm-parse/src/: class_file_parser.rs  class_reader.rs  constant_pool.rs  instance_klass.rs  lib.rs
crates/jrm-parse/src/attributes/: annotation.rs  code.rs  mod.rs
crates/jrm-runtime/: Cargo.toml
crates/jrm-runtime/src/: byte_reader.rs  class.rs  class_loader.rs  frame.rs  lib.rs  method.rs  method_area.rs  slot.rs  string_pool.rs  thread.rs  util.rs
crates/jrm-runtime/src/heap/: array.rs  instance.rs  mod.rs
crates/jrm/asset/: Demo.java  Simple1Impl.java
crates/jrm/src/: attribute.rs  attributes.rs  class_file_parser.rs  class_reader.rs  constant_pool.rs  instance_klass.rs  main.rs  test_context.rs  util.rs
crates/jrm/src/attributes/: code.rs  mod.rs
crates/jrm/src/parse/: class_file_parser.rs  constant_pool.rs  instance_klass.rs  mod.rs
crates/jrm/src/parse/attributes/: code.rs  mod.rs
crates/jrm/src/runtime/: class_loader.rs  frame.rs  heap.rs  mod.rs  slot.rs  thread.rs
crates/macro-utils/: Cargo.toml
crates/macro-utils/src/: lib.rs
crates/native-java/: Cargo.toml  Readme.md
crates/native-java/src/: lib.rs  string.rs  system.rs
jrm/: .env  Cargo.toml
jrm-macro/: Cargo.toml
jrm-macro/src/: lib.rs
jrm/src/: attribute.rs  class_file_parser.rs  class_reader.rs  constant_pool.rs  main.rs
scripts/: compile.bash  fmt.bash
