[workspace]
members = [
    "crates/jrm-runtime",
    "crates/base-macro",
    "crates/jrm-macro",
    "crates/macro-utils",
    "crates/jrm-parse",
    "crates/jrm-cli",
    "crates/jrm-native",
    "crates/native-java",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"

syn = "2.0.104"
convert_case = "0.8.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"

prettyplease = "0.2"
