[package]
name = "base-macro"
version = "0.1.0"
edition = "2024"
[lib]
proc-macro = true
[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
rstest = { workspace = true }
macro-utils = { path = "../macro-utils" }
