[package]
name = "jrm-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
base-macro = { path = "../base-macro" }
macro-utils = { path = "../macro-utils" }
[features]
default = []
debug = []
