[package]
name = "jrm-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# 可以使用Ident表示Type
# 支持derive_syn_parse
darling = { git = "https://github.com/TedDriggs/darling", rev = "aff17ba27f931ccf984eb55683f6f376ba77791d" }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
base-macro = { path = "../base-macro" }
macro-utils = { path = "../macro-utils" }
[features]
default = []
debug = []
