[package]
name = "jrm-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
dotenvy = { workspace = true }
maplit = "1.0.2"
bitflags = "2.9.1"
jrm-macro = { path = "../jrm-macro", features = ["debug"] }
[features]
default = []
test = []
