[package]
name = "jrm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
maplit = "1.0.2"
bpaf = { version = "0.9.20", features = ["derive"] }
jrm-macro = { path = "../jrm-macro", features = ["debug"] }
rust-embed = "8.7.2"
thiserror = "2.0.12"
bitflags = "2.9.1"
rstest = "0.25.0"
dashmap = "6.1.0"
